# project-creator

./: .gitignore  .gitmodules  CMakeLists.txt  Matmakefile  README.md  build.cpp  install.sh
lib/: CMakeLists.txt
script/: create-links.sh  install.sh  project-goto
src/: build-project.cpp  buildsettings.h  create-project.cpp  createsettings.h  files.h  main.cpp
src/compilecommands/: mergecommands.cpp
src/create/: create-project.cpp  createsettings.h  files.h  qtuserfile.h
src/find/: findsettings.h  mfind.cpp
src/git/: gitsettings.h  mgit.cpp
src/open/: mopen.cpp  opensettings.h
src/overview/: overview.cpp
testdata/: test.cpp
testdata/include/: include.h
